Align group status with web server/jvm status. This is the fix to CharmNT #18253.

--- a/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/toc-datatable.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/toc-datatable.css
@@ -64,3 +64,7 @@ table.hierarchical > thead > tr > th {
 table.hierarchical > tbody > tr > td {
     padding: 1px 0px 0px 1px !important;
 }
+
+span[class^="group-state-"] {
+    padding-left:7px
+}
